--- a/tour/index.html
+++ b/tour/index.html
@@ -24,15 +24,18 @@
 				 
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 					<span class="navbar-toggler-icon"></span>
-				</button> <a class="navbar-brand" href="#">Brand</a>
+				</button> <a class="navbar-brand" href="#">Поехали вместе</a>
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="navbar-nav">
 						<li class="nav-item active">
-							 <a class="nav-link" href="#">Link <span class="sr-only">(current)</span></a>
+							 <a class="nav-link" href="norway.html">Норвегия <span class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item">
-							 <a class="nav-link" href="#">Link</a>
+							 <a class="nav-link" href="france.html">Франция</a>
 						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="italy.html">Италия</a>
+					   </li>
 					</ul>
 					<form class="form-inline">
 						<input class="form-control mr-sm-2" type="text"> 
@@ -44,10 +47,11 @@
 			</nav>
 			<div class="jumbotron">
 				<h2>
-					Hello, world!
+					Поехали вместе!
 				</h2>
 				<p>
-					This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.
+					У нас очень хорошие цены, удобные рейси, почти в каждый уголок земли. <br>
+					<img src="/images/go.png">
 				</p>
 				<p>
 					<a class="btn btn-primary btn-large" href="#">Learn more</a>
@@ -58,10 +62,14 @@
 	<div class="row">
 		<div class="col-md-4">
 			<h2>
-				Heading
+				Автобусные тури
 			</h2>
 			<p>
-				Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+				<b><u>АТОБУСНЫЙ ТУР ИЗ КИЕВА В БЕРЛИН</u></b><br>
+				цена от 15 евро<br>
+				Удобные кресла, большое пространство для ног, бесплатный Wi-Fi, <br>
+				кондиционер, лампы для чтения и розетки в салоне
+
 			</p>
 			<p>
 				<a class="btn" href="#">View details »</a>
@@ -69,10 +77,13 @@
 		</div>
 		<div class="col-md-4">
 			<h2>
-				Heading
+				Авиа тури
 			</h2>
 			<p>
-				Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+				<b><u>АВИА ТУР ИЗ КИЕВА В СТОКГОЛЬМ</u></b><br>
+				цена от 429 гривен<br>
+				Удобный авиа-перелет, хорошие борт-проводники, пилоты с большим стажем<br>
+				На этом борту очень уютно:)
 			</p>
 			<p>
 				<a class="btn" href="#">View details »</a>
@@ -80,10 +91,13 @@
 		</div>
 		<div class="col-md-4">
 			<h2>
-				Heading
+				Морские круизы
 			</h2>
 			<p>
-				Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+					<b><u>КРУИЗ ИЗ ХЕЛЬСИНКИ В СТОКГОЛЬМ</u></b><br>
+					скидка на каюту до 20%<br>
+					Круиз, который запомнится каждому! Ведь на борту паромов Silja Serenade и Symphony<br>
+					Вы найдете все и даже немного больше для прекрасного отдыха в кругу семьи, близких и друзей! 
 			</p>
 			<p>
 				<a class="btn" href="#">View details »</a>
