--- a/tour/index.html
+++ b/tour/index.html
@@ -12,11 +12,15 @@
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <link href="css/style.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
+	<link rel="stylesheet" href="/node_modules/flag-icon-css/css/flag-icon.min.css">
+	
+
 
   </head>
   <body>
 
+		
     <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
