--- a/tour/france.html
+++ b/tour/france.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Франция</h1>
+    <div class="d2">
+    <h1 class="center">Франция</h1> </div>
    
     </table>
         <h2>Интересные места во Франции, в которых мы вам предлагаем побывать:</h2>
