Станом на 25.11.19, зпочаток роботи над  3 сторінки сайту

--- a/tour/norway.html
+++ b/tour/norway.html
@@ -59,7 +59,7 @@
     
     <section>
      <div class=".title_style_blue">
-    <div class="center">  <h2>Интересные места в Норвегии, в которых мы вам предлагаем побывать:</h2></div>
+     <h2 >Интересные места в Норвегии, в которых мы вам предлагаем побывать:</h2></div>
     </section>
 
         <ul>
