Станом на 28.11.2019 майже дороблені 2 сторінки

--- a/tour/index.html
+++ b/tour/index.html
@@ -49,7 +49,7 @@
 					</form>
 				</div>
 			</nav>
-			<div class="jumbotron">
+			<div class="fon1">
 				<h2>
 					Поехали вместе!
 				</h2>
@@ -61,34 +61,35 @@
 					<a class="btn btn-primary btn-large" href="#">Learn more</a>
 				</p>
 			</div>
-		</div>
+		
+	</div>
 	</div>
 	<div class="row">
 		<div class="col-md-4">
 			<h2>
-				Автобусные тури
+				Автобусные туры
 			</h2>
-			<p>
-				<b><u>АТОБУСНЫЙ ТУР ИЗ КИЕВА В БЕРЛИН</u></b><br>
+			<div class="avt">
+				<b><u>АВТОБУСНЫЙ ТУР ИЗ КИЕВА В БЕРЛИН</u></b><br>
 				цена от 15 евро<br>
 				Удобные кресла, большое пространство для ног, бесплатный Wi-Fi, <br>
 				кондиционер, лампы для чтения и розетки в салоне
 
-			</p>
+			</div>
 			<p>
 				<a class="btn" href="#">View details »</a>
 			</p>
 		</div>
 		<div class="col-md-4">
 			<h2>
-				Авиа тури
+				Авиа туры
 			</h2>
-			<p>
+			<div class="avi">
 				<b><u>АВИА ТУР ИЗ КИЕВА В СТОКГОЛЬМ</u></b><br>
 				цена от 429 гривен<br>
 				Удобный авиа-перелет, хорошие борт-проводники, пилоты с большим стажем<br>
 				На этом борту очень уютно:)
-			</p>
+			</div>
 			<p>
 				<a class="btn" href="#">View details »</a>
 			</p>
@@ -97,12 +98,13 @@
 			<h2>
 				Морские круизы
 			</h2>
-			<p>
+			<div class="kru">
 					<b><u>КРУИЗ ИЗ ХЕЛЬСИНКИ В СТОКГОЛЬМ</u></b><br>
 					скидка на каюту до 20%<br>
 					Круиз, который запомнится каждому! Ведь на борту паромов Silja Serenade и Symphony<br>
 					Вы найдете все и даже немного больше для прекрасного отдыха в кругу семьи, близких и друзей! 
-			</p>
+			</div>
+			
 			<p>
 				<a class="btn" href="#">View details »</a>
 			</p>
