Виправила майже всі помилки на сторінці Норвегії

--- a/tour/italy.html
+++ b/tour/italy.html
@@ -6,6 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="css/style.css" rel="stylesheet">
     <title>Document</title>
+
+    <style>
+    img:hover{
+            border: 5px solid black;
+    }
+
+    h1:hover{
+            text-shadow: 10px 10px 20px solid black;
+    }
+
+    </style>
 </head>
 <body bgcolor="FFFBD1">
 
