--- a/javascript/lesson02/movies.html
+++ b/javascript/lesson02/movies.html
@@ -1,47 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <script>
-        var movies =[
-        {
-        Title: "baby driver"
-        Year: 2017
-        Manufacture: "Big Talk Productions"
-        Country : "USA"
-        Photo :  
-        },
-        {
-        Title : wonder woman
-        Year : 2017
-        Studio : DC Entertainment
-        Country : USA
-        Photo : https://images-na.ssl-images-amazon.com/images/I/81ugxFdBZBL._SY445_.jpg
-        },
-        {
-        Title : Avengers: Infinity War
-        Year : 2018
-        Studio : Marvel
-        Country : USA
-        },
-        {
-        Title =
-        Year =
-        Studio =
-        Country =
-        },
-        {
-        Title =
-        Year =
-        Studio =
-        Country =
-        },
+        var movies = [
+            {
+                Title: "baby driver",
+                Year: 2017,
+                Studio: "Big Talk Productions",
+                Country: "USA",
+                Photo: "https://thevinyl.com.ua/image/cache/data/1210-600x600.jpg",
+            },
+            {
+                Title: "Wonder woman",
+                Year: 2017,
+                Studio: "DC Entertainment",
+                Country: "USA",
+                Photo: "https://images-na.ssl-images-amazon.com/images/I/81ugxFdBZBL._SY445_.jpg",
+            },
+            {
+                Title: "Avengers Infinity War",
+                Year: 2018,
+                Studio: "Marvel",
+                Country: "USA",
+                Photo: "https://upload.wikimedia.org/wikipedia/ru/4/4d/Avengers_Infinity_War_poster.jpg",
+            },
+            {
+                Title: "The witcher",
+                Year: 2019,
+                Studio: "Netflix",
+                Country: "USA",
+                Photo: "http://ki.ill.in.ua/m/670x450/24466416.jpg",
+            },
+            {
+                Title: "Gravity falls",
+                Year: 2012,
+                Studio: "Disney",
+                Country: "USA",
+                Photo: "https://images-na.ssl-images-amazon.com/images/I/918E1Ema1KL._SL1500_.jpg",
+            },
+            
+        ];
+        function fillTable() {
+                document.writeln("<table><thead><tr><th>Title</th><th>Year</th><th>Studio</th><th>Country</th><th>Photo</th></tr></thead><tbody>");
+                for (let index = 0; index < movies.length; index++) {
+                    let element = movies[index];
+                    document.writeln("<tr><td>" + element.Title + "</td><td>" + element.Year + "</td><td>" + element.Studio + "</td><td>" +
+                        element.Country + "</td>" +
+                        "<td><img style='width: 240px;' src='" + element.Photo + "' alt='" + element.Title + "'></td>");
+                }
+                document.writeln("</tbody></table>");
+            }
     </script>
 </head>
-<body>
-    
+
+<body onload="fillTable()">
+
 </body>
+
 </html>
