--- a/javascript/lesson02/movies.html
+++ b/javascript/lesson02/movies.html
@@ -9,10 +9,10 @@
     <script>
         var movies = [
             {
-                Title: "baby driver",
+                Title: "Baby driver",
                 Year: 2017,
                 Studio: "Big Talk Productions",
-                Country: "USA",
+                Country: "Norvay",
                 Photo: "https://thevinyl.com.ua/image/cache/data/1210-600x600.jpg",
             },
             {
@@ -26,7 +26,7 @@
                 Title: "Avengers Infinity War",
                 Year: 2018,
                 Studio: "Marvel",
-                Country: "USA",
+                Country: "",
                 Photo: "https://upload.wikimedia.org/wikipedia/ru/4/4d/Avengers_Infinity_War_poster.jpg",
             },
             {
@@ -43,22 +43,58 @@
                 Country: "USA",
                 Photo: "https://images-na.ssl-images-amazon.com/images/I/918E1Ema1KL._SL1500_.jpg",
             },
-            
+            {
+                Title: "Storoshova zastava",
+                Year: 2017,
+                Studio: "Ua studio",
+                Country: "UKRAINE",
+                Photo: "https://liveam.tv/assets/images/2019/storojeva-zastava.jpg",
+            },
+
         ];
+        function compareByCountry(movieA, movieB) {
+            if (movieA.Country == movieB.Country)
+                return 0;
+            else if (movieA.Country < movieB.Country)
+                return -1;
+            else
+                return 1;
+        }
+
         function fillTable() {
-                document.writeln("<table><thead><tr><th>Title</th><th>Year</th><th>Studio</th><th>Country</th><th>Photo</th></tr></thead><tbody>");
-                for (let index = 0; index < movies.length; index++) {
-                    let element = movies[index];
-                    document.writeln("<tr><td>" + element.Title + "</td><td>" + element.Year + "</td><td>" + element.Studio + "</td><td>" +
-                        element.Country + "</td>" +
-                        "<td><img style='width: 240px;' src='" + element.Photo + "' alt='" + element.Title + "'></td>");
-                }
-                document.writeln("</tbody></table>");
+            movies.sort(compareByCountry);
+            document.writeln("<table><thead><tr><th>Title</th><th>Year</th><th>Studio</th><th>Country</th><th>Photo</th></tr></thead><tbody>");
+            for (const key in movies) {
+                document.writeln("<tr><td>" + movies[key].Title + "<td></td>" + movies[key].Year + "<td></td>" + movies[key].Studio + "<td></td>" +
+                    movies[key].Country + "</td>" +
+                    "<td><img style='width: 240px;' src='" + movies[key].Photo + "' alt='" + movies[key].Title + "'></td>");
             }
+            document.writeln("</tbody></table>");
+        }
+
+        function fillTable() {
+            for (const key in movies){
+                document.writeln('<div class ="container'><div class="row">);
+                
+            }
+        <div class="row">
+            <div class="col-sm-6 col-md-4">
+                <div class="thumbnail">
+                    <img src="..." alt="...">
+                        <div class="caption">
+                            <h3>Thumbnail label</h3>
+                            <p>...</p>
+                            <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+                        </div>
+    </div>
+                </div>
+            </div>
     </script>
 </head>
 
 <body onload="fillTable()">
+
+
 
 </body>
 
