--- a/html51/lesson21/movies.html
+++ b/html51/lesson21/movies.html
@@ -94,13 +94,10 @@
         for (const key in movies) {
             body.innerHTML += ('<div class="col-sm-6 col-md-4">' +
                 '<div class="thumbnail">' +
-                '<img style="width: 240px;" src"' + movies[key].Photo + '" alt= "' movies[key].Title + '" > +
+                '<img style="width: 240px;" src"' + movies[key].Photo + '" alt= "' movies[key].Title + '" >' +
                 '<div class="caption">' +
                 '<h3>' + movies[key].Title + '</h3>' +
-                '<p>' + movies[key].Year + ' ' + movies[key].Studio '</p>' +
-                    '</div>' +
-                    '</div>' +
-                    '</div>'
+                '<p>' + movies[key].Year + ' ' + movies[key].Studio '</p>' + '</div>' + '</div>' + '</div>'
             );
         }
         body.innerHTML += ('</div>')
